# openorchestrator

./: .gitignore  .worktreerc.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  Makefile  README.md  SPECS.md  TESTING.md  coverage.json  docker-compose.test.yml  plan.toml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: worktree.md  wt-cleanup.md  wt-create.md  wt-list.md  wt-status.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.owt/: critic_verdicts.jsonl
assets/: demo.tape  demo_mock_owt.py  demo_seed.py  demo_switchboard.py
docs/: GROKANALYSIS.md  GROKSPEC.md  commands.md  configuration.md  herdr-integration.md  multiplexer-backends.md  security.md
scripts/: context-injector.py  generate_demo.py
src/claude_orchestrator/: __init__.py  cli.py  config.py
src/claude_orchestrator/core/: __init__.py  cleanup.py  environment.py  project_detector.py  status.py  sync.py  tmux_cli.py  tmux_manager.py  worktree.py
src/claude_orchestrator/models/: __init__.py  project_config.py  worktree_info.py
src/claude_orchestrator/utils/: __init__.py
src/open_orchestrator/: __init__.py  __version__.py  cli.py  config.py
src/open_orchestrator/commands/: __init__.py  _shared.py  agent.py  config_cmd.py  critic_cmd.py  db_cmd.py  doctor.py  dream_cmd.py  maintenance.py  memory_cmd.py  merge_cmds.py  orchestrate_cmds.py  swarm_cmd.py  worktree.py
src/open_orchestrator/commands/worktree/: __init__.py  _shared.py  attach.py  branch.py  delete.py  ls.py  new.py  switch.py
src/open_orchestrator/core/: __init__.py  _db.py  _path.py  _subprocess.py  aaak.py  ab_launcher.py  agent_detector.py  agent_launcher.py  auto_agent.py  backend_factory.py  batch.py  batch_models.py  batch_scheduler.py  branch_namer.py  cleanup.py  compaction.py  control_plane_actions.py  control_plane_sections.py  control_plane_view.py  critic.py  dashboard.py  denial_tracker.py  dream.py  environment.py  environment_claude_md.py  herdr_backend.py  herdr_client.py  hooks.py  intelligence.py  mcp_peer.py  memory.py  memory_miner.py  memory_store.py  merge.py  multiplexer.py  orchestrator.py  pane_actions.py  pr_linker.py  process_manager.py  project_detector.py  (+26 more)
src/open_orchestrator/models/: __init__.py  ab_workspace.py  backend.py  compaction.py  control_plane.py  hooks.py  intelligence.py  maintenance.py  memory.py  pr_info.py  project_config.py  session.py  status.py  subagent.py  swarm.py  workspace.py  worktree_info.py
src/open_orchestrator/popup/: __init__.py  picker.py
src/open_orchestrator/skills/open-orchestrator/: SKILL.md
src/open_orchestrator/tui/: __init__.py  app.py  styles.tcss
src/open_orchestrator/tui/screens/: __init__.py  ab_compare.py  confirm.py  help_overlay.py  theme_picker.py
src/open_orchestrator/tui/widgets/: __init__.py  activity_log.py  status_panel.py  token_usage.py  worktree_table.py
src/open_orchestrator/utils/: io.py  lazy.py  logging.py  output.py
tests/: conftest.py  test_aaak.py  test_agent_detector.py  test_agent_launcher.py  test_agent_launcher_herdr.py  test_auto_agent.py  test_backend_factory.py  test_background_events.py  test_batch.py  test_batch_dag.py  test_batch_scheduler.py  test_branch_mode.py  test_branch_namer.py  test_cleanup.py  test_cli.py  test_cli_herdr_flags.py  test_cli_smoke.py  test_commands_agent.py  test_commands_config.py  test_commands_db.py  test_commands_doctor.py  test_commands_maintenance.py  test_commands_orchestrate.py  test_commands_worktree.py  test_compaction.py  test_config_custom_tools.py  test_config_migration.py  test_control_plane_actions.py  test_control_plane_sections.py  test_control_plane_view.py  test_critic.py  test_dashboard.py  test_db_concurrency.py  test_db_perms.py  test_demo_assets.py  test_denial_tracker.py  test_distribution.py  test_docker_infrastructure.py  test_dream.py  test_environment.py  (+57 more)
tests/core/: test_ab_launcher.py
tests/manual/: herdr_submit_matrix.md
tests/tui/: test_ab_compare_screen.py  test_app.py  test_widgets.py
