[project]
name = "open-orchestrator"
version = "0.1.0"
description = "Git Worktree + Claude Code orchestration tool for managing parallel development workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pedro Lopes"}
]
keywords = ["git", "worktree", "claude", "tmux", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
    "gitpython>=3.1.0",
    "libtmux>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-textual-snapshot>=0.3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
owt = "open_orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_orchestrator"]
artifacts = ["src/open_orchestrator/skills/**/*.md"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]
ignore = [
    "S101",  # assert usage - standard in pytest tests
    "S108",  # insecure temp file usage - acceptable in test fixtures with mocks
    "S603",  # subprocess call - false positive when using list arguments
    "S607",  # partial executable path - acceptable for well-known system commands (git, tmux)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "gh_cli: Tests that require GitHub CLI (gh) to be installed or mocked",
    "tmux: Tests that require tmux to be installed or mocked",
    "textual: Tests for Textual TUI components and dashboard",
    "slow: Tests that take longer than 1 second to execute",
]
