[project]
name = "open-orchestrator"
version = "0.2.0"
description = "Git Worktree + AI agent orchestration tool for parallel development workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pedro Lopes"}
]
keywords = ["git", "worktree", "claude", "tmux", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "toml>=0.10.0",
    "gitpython>=3.1.0",
    "libtmux>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/gitpcl/openorchestrator"
Repository = "https://github.com/gitpcl/openorchestrator"
Documentation = "https://github.com/gitpcl/openorchestrator#readme"
Changelog = "https://github.com/gitpcl/openorchestrator/releases"
"Bug Tracker" = "https://github.com/gitpcl/openorchestrator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
owt = "open_orchestrator.cli:main"
owt-popup = "open_orchestrator.popup.picker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_orchestrator"]
artifacts = ["src/open_orchestrator/skills/**/*.md"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "*.egg-info",
]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]
ignore = [
    "S101",  # assert usage - standard in pytest tests
    "S108",  # insecure temp file usage - acceptable in test fixtures with mocks
    "S603",  # subprocess call - false positive when using list arguments
    "S607",  # partial executable path - acceptable for well-known system commands (git, tmux)
    "S110",  # try-except-pass - acceptable for best-effort cleanup operations
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "gh_cli: Tests that require GitHub CLI (gh) to be installed or mocked",
    "tmux: Tests that require tmux to be installed or mocked",
    "slow: Tests that take longer than 1 second to execute",
]

[tool.coverage.run]
source = ["src/open_orchestrator"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = [
    "src/open_orchestrator",
    "*/site-packages/open_orchestrator",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
