[project]
name = "open-orchestrator"
version = "0.4.0"
description = "Git Worktree + AI agent orchestration tool for parallel development workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pedro Lopes", email = "pclopes.plus@gmail.com"}
]
keywords = ["git", "worktree", "claude", "tmux", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=8.0.0",
    "toml>=0.10.0",
    "gitpython>=3.1.0",
    "libtmux>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/gitpcl/openorchestrator"
Repository = "https://github.com/gitpcl/openorchestrator"
Source = "https://github.com/gitpcl/openorchestrator"
Documentation = "https://github.com/gitpcl/openorchestrator#readme"
Changelog = "https://github.com/gitpcl/openorchestrator/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/gitpcl/openorchestrator/issues"
Funding = "https://github.com/sponsors/gitpcl"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
owt = "open_orchestrator.cli:main"
owt-popup = "open_orchestrator.popup.picker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_orchestrator"]
artifacts = ["src/open_orchestrator/skills/**/*.md"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "*.egg-info",
]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "SIM"]
ignore = [
    "S101",  # assert usage - standard in pytest tests
    "S108",  # insecure temp file usage - acceptable in test fixtures with mocks
    "S603",  # subprocess call - false positive when using list arguments
    "S607",  # partial executable path - acceptable for well-known system commands (git, tmux)
    "B008",  # function-call-in-default-argument — Click typer/pydantic Field idioms
    "B904",  # raise-without-from-inside-except — acceptable in CLI/UX layers
    "SIM108",# if-else-block-instead-of-ternary — ternaries hurt readability in some places
    "SIM117",# nested-with-statements — pytest context-manager stacks
]

[tool.ruff.lint.per-file-ignores]
# Tests use broad assertions and idioms that aren't appropriate in src/.
"tests/**/*.py" = [
    "B007",  # Unused loop variable — `for i in range(N)` is fine in tests
    "B011",  # `assert False` — acceptable in defensive test branches
    "B017",  # `pytest.raises(Exception)` — sometimes the test wants "any error"
    "SIM105",# try/except/pass cleanup in conftest is clearer than contextlib.suppress
    "SIM300",# Yoda conditions occasionally aid readability in assertions
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["open_orchestrator.core.mcp_peer"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "gh_cli: Tests that require GitHub CLI (gh) to be installed or mocked",
    "tmux: Tests that require tmux to be installed or mocked",
    "slow: Tests that take longer than 1 second to execute",
]

[tool.coverage.run]
source = ["src/open_orchestrator"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.paths]
source = [
    "src/open_orchestrator",
    "*/site-packages/open_orchestrator",
]

[dependency-groups]
# PEP 735 dev group — modern uv idiom. Install via `uv sync --group dev` or
# `uv pip install --group dev .` (replaces the legacy `.[dev]` extra).
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.0",
    "types-toml>=0.10.8.20240310",
    "build>=1.0.0",
    "twine>=5.0.0",
    # Optional runtime extras installed in dev so mypy can type-check the
    # optional code paths (mcp_peer.py imports mcp.server.fastmcp).
    "mcp>=1.0.0",
]

[tool.uv]
# Override global uv.toml exclude-newer so security patches (cryptography>=46.0.6,
# requests>=2.33.0, pygments>=2.20.0) can be picked up by the resolver.
exclude-newer = "2026-04-07T23:59:59Z"
